--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap-icons-vue": "^1.8.1",
     "daisyui": "^2.20.0",
     "vue": "^3.2.37"
