--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap-icons-vue": "^1.8.1",
     "daisyui": "^2.20.0",
+    "theme-change": "^2.2.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
