--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^8.0.0",
     "axios": "^0.27.2",
     "bootstrap-icons-vue": "^1.8.1",
     "daisyui": "^2.20.0",
