--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_TRANSLATE_API=https://localhost:3000/api/
+VITE_TRANSLATE_API=https://live-translator-kappa.vercel.app/api/
 VITE_TRANSLATE_INTERVAL=3000
